--- a/WatchApp/CHANGELOG.txt
+++ b/WatchApp/CHANGELOG.txt
@@ -1,5 +1,13 @@
 GarminSD CHANGELOG
 ==================
+v0.7 - 10nov2019:
+         -  Explicitly switches off gps position logging in case it is
+            on by default (a user reported this to be the case on a Vivoactive 4
+	 -  Tidied up logging to Garminsd.txt log file so it does not fill up
+	    too quickly (does not repeat the same message over and over).
+	 -  Reports communications error codes onto the watch screen
+	    (Error codes defined in https://developer.garmin.com/downloads/connect-iq/monkey-c/doc/Toybox/Communications.html)
+
 v0.6 - 21oct2019: Fixed problem with Vivoactive3 hardware button exiting app without prompt, and adjusted position of fields on screen.
 
 v0.2 - 07apr2019 - added confirmation dialog to make it harder to exit the
