--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,9 @@
 GarminSD CHANGELOG
 ==================
 
+v1.5 - 24mar2024:
+     - Reduced on-watch processing and reduced communications to 
+	    improve battery life.  *NOTE:* Requires Andrid App V4.3.x or higher
 v1.4 - 18aug2023:
 	- Added configuration menu to allow user to select whether to play a sound, light up the watch or vibrate when 
 	  an alarm or error occurs.
